fix sidebar alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,10 @@ i.fa.fa-bars {
 	margin:0px !important;
 }
 
+.card-sidebar {
+	margin-top: 0px;
+}
+
 
 /* ######################################
 
